# Email-Triage-Environment

./: Dockerfile  index.html  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  tasks.py
server/: app.py
