[project]
name = "email-triage-env"
version = "1.0.0"
description = "An OpenEnv environment for AI email triage"
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "pyyaml",
    "requests",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/chitrakshi404/email-triage-env"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"
